Slight fixes to spacing

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -9,3 +9,11 @@
   background: #000000;
   position: relative;
 }
+
+.clip-row {
+  margin-bottom: 10px;
+}
+
+.form-row {
+  margin-bottom: 10px;
+}
